# fake_mc_server

./: Cargo.toml  README.md  disconnect.json  server-list.json
src/: error.rs  main.rs
